--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-krpano-hooks": "^2.0.0",
+    "react-number-format": "^5.0.0-beta.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
