--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-360-view": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
