--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "node-sass": "^7.0.3",
+    "pannellum-react": "^1.2.4",
     "react": "^18.2.0",
     "react-360-view": "^0.1.3",
     "react-dom": "^18.2.0",
